# chatroom

./: Cargo.toml
chat-client/: Cargo.toml
chat-client/src/: client.rs  main.rs  ui.rs
chat-server/: Cargo.toml
chat-server/src/: main.rs  server.rs
protocol/: Cargo.toml
protocol/src/: codec.rs  connection.rs  constants.rs  error.rs  lib.rs  message.rs  transport.rs
